refactor user -> payment
