# api/src/main/resources/api.yaml
@@ -1,82 +1,42 @@
 openapi: 3.0.1
 info:
   version: '1.0'
-  title: User service
+  title: Payment service
 servers:
-  - url: '/api/v1/user-service'
+  - url: '/api/v1/payment-service'
 tags:
-  - name: User Management
-    description: Operations with User entities
+  - name: Payment Management
+    description: Operations with Payment entities
 paths:
-  /user/{id}:
-    get:
+  /payment/{id}:
+    post:
       tags:
-        - User Management
-      summary: Get User
-      description: Get User by id
-      operationId: getUserById
+        - Payment Management
+      summary: Pay order
+      description: Pay order by id
+      operationId: pay
       parameters:
         - $ref: '#/components/parameters/id'
+      requestBody:
+        description: order
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrderDto'
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserDTO'
-        '404':
-          description: User not found
-    put:
-      tags:
-        - User Management
-      summary: Add User
-      description: Update User
-      operationId: updateUser
-      parameters:
-        - $ref: '#/components/parameters/id'
-      requestBody:
-        $ref: '#/components/requestBodies/UserRequest'
-      responses:
-        '200':
-          description: Updated
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserDTO'
-    delete:
-      tags:
-        - User Management
-      summary: Delete User
-      description: Delete User
-      operationId: delete
-      parameters:
-        - $ref: '#/components/parameters/id'
-      responses:
-        '200':
-          description: Ok. User succesfully deleted
-
-  /user:
-    post:
-      tags:
-        - User Management
-      summary: Add User
-      description: Add User
-      operationId: addUser
-      requestBody:
-        $ref: '#/components/requestBodies/UserRequest'
-      responses:
-        '200':
-          description: Added
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserDTO'
+                $ref: '#/components/schemas/PaymentDto'
+  /payment/:
     get:
       tags:
-        - User Management
-      summary: Get Users
-      description: Get all Users
-      operationId: getAllUsers
+        - Payment Management
+      summary: Get all payments
+      description: Get all payments
+      operationId: getAllPayments
       responses:
         '200':
           description: OK
@@ -85,46 +45,85 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/UserDTO'
+                  $ref: '#/components/schemas/PaymentDto'
 
 components:
-  requestBodies:
-    UserRequest:
-      description: User request
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/UserDTO'
   parameters:
     id:
       name: id
       in: path
-      description: User ID
+      description: Order ID
       required: true
       schema:
-        type: integer
-        format: int32
-      example: 59949
+        type: string
+      example: 599sdf49
   schemas:
-    UserDTO:
+    PaymentDto:
       type: object
       properties:
         id:
-          description: Unique Identifier of User
+          description: Unique Identifier of Payment
           type: integer
           format: int32
           readOnly: true
-        name:
-          description: Name of User.
+        orderId:
+          description: Order id.
           type: string
           readOnly: true
           maxLength: 100
-        contact:
-          description: Contact of User.
+        customerId:
+          description: Id of User.
           type: string
           maxLength: 100
-        orders:
-          description: List of orders of User.
-          type: array
-          items:
-            type: string
+        total:
+          description: Total of order.
+          type: double
+    PaymentType:
+      type: string
+      enum:
+        - CASH
+        - CARD
+        - CARD_ONLINE
+    Status:
+      type: string
+      enum:
+        - OK
+        - CANCEL
+        - FAILED
+    OrderDto:
+      type: object
+      properties:
+        id:
+          description: Unique Identifier of Order.
+          type: string
+          readOnly: true
+        name:
+          description: Name of Order.
+          type: string
+          maxLength: 100
+        customerId:
+          type: string
+        total:
+          type: number
+          format: double
+        shippingType:
+          $ref: '#/components/schemas/ShippingType'
+        status:
+          $ref: '#/components/schemas/OrderStatus'
+        products:
+          type: object
+          additionalProperties:
+            type: integer
+        paymentId:
+          type: integer
+      required:
+        - name
+        - customerId
+        - total
+        - shippingType
+        - status
+        - products
+    ShippingType:
+      type: string
+    OrderStatus:
+      type: string
